--- a/nn/classification/iris.ipynb
+++ b/nn/classification/iris.ipynb
@@ -57,11 +57,7 @@
     "\n",
     "// Get the predictors (x) and targets (y)\n",
     "const x = data.map((fl) => fl.slice(0, 4).map(Number));\n",
-    "const y = data.map((fl) => fl[4]);\n",
-    "\n",
-    "const encoder = new CategoricalEncoder();\n",
-    "\n",
-    "const encodedY = encoder.fit(y).transform<\"f32\">(y, \"f32\");"
+    "const y = data.map((fl) => fl[4]);"
    ]
   },
   {
