remove old netsaur examples

--- a/nn/multinomial_classification.ipynb
+++ b/nn/multinomial_classification.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "// Read the training dataset\n",
-    "const _data = Deno.readTextFileSync(\"../../datasets/iris.csv\");\n",
+    "const _data = Deno.readTextFileSync(\"../datasets/iris.csv\");\n",
     "const data = parse(_data);\n",
     "\n",
     "// Get the predictors (x) and targets (y)\n",
