--- a/slp/logistic_regression.ipynb
+++ b/slp/logistic_regression.ipynb
@@ -263,9 +263,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have prepared our inputs, we can initialize our solver. Since we are performing logistic regression, we use a Gradient Descent solver.\n",
+    "Now that we have prepared our inputs, we can initialize our solver. Since we are performing logistic regression, we use a SAG solver.\n",
     "\n",
-    "We use the `crossEntropy` loss function which is used for multinomial classification, `adam` as our optimizer, and finally a `softmax` function to compute joint probabilities."
+    "We use the `crossEntropy` loss function which is used for multinomial classification, `rmsprop` as our optimizer, and finally a `softmax` function to compute joint probabilities."
    ]
   },
   {
