use imdb dataset instead of spam dataset

--- a/slp/logistic_regression.ipynb
+++ b/slp/logistic_regression.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mDownloading\u001b[39m https://github.com/retraigo/classy-lala/releases/download/v1.0.0/classy.dll\n"
+     ]
+    }
+   ],
    "source": [
     "import { parse } from \"https://deno.land/std@0.204.0/csv/parse.ts\";\n",
     "import {\n",
@@ -19,7 +27,7 @@
     "  Matrix,\n",
     "  useSplit,\n",
     "  CategoricalEncoder,\n",
-    "} from \"https://deno.land/x/vectorizer@v0.3.4/mod.ts\";\n",
+    "} from \"https://deno.land/x/vectorizer@v0.3.5/mod.ts\";\n",
     "import {\n",
     "  SagSolver,\n",
     "  softmaxActivation,\n",
@@ -86,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +116,7 @@
        "4.9\t3.1\t1.5\t0.1\n"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +150,7 @@
        "]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +191,7 @@
        "1\t0\t0\n"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +213,7 @@
        "[ [ \u001b[33m150\u001b[39m, \u001b[33m4\u001b[39m ], [ \u001b[33m150\u001b[39m, \u001b[33m3\u001b[39m ] ]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,29 +231,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<table>\n",
-       "<thead><tr><th>idx</th><th>0</th><th>1</th><th>2</th><th>3</th></tr></thead><tr><td><strong>0</strong></td><td>5.1</td><td>3.5</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>1</strong></td><td>4.7</td><td>3.2</td><td>1.3</td><td>0.2</td></tr><tr><td><strong>2</strong></td><td>4.6</td><td>3.1</td><td>1.5</td><td>0.2</td></tr><tr><td><strong>3</strong></td><td>5</td><td>3.6</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>4</strong></td><td>5.4</td><td>3.9</td><td>1.7</td><td>0.4</td></tr><tr><td><strong>5</strong></td><td>4.6</td><td>3.4</td><td>1.4</td><td>0.3</td></tr><tr><td><strong>6</strong></td><td>4.4</td><td>2.9</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>7</strong></td><td>5.4</td><td>3.7</td><td>1.5</td><td>0.2</td></tr><tr><td><strong>8</strong></td><td>4.8</td><td>3.4</td><td>1.6</td><td>0.2</td></tr><tr><td><strong>9</strong></td><td>4.8</td><td>3</td><td>1.4</td><td>0.1</td></tr></table>"
+       "<thead><tr><th>idx</th><th>0</th><th>1</th><th>2</th><th>3</th></tr></thead><tr><td><strong>0</strong></td><td>4.9</td><td>3</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>1</strong></td><td>4.7</td><td>3.2</td><td>1.3</td><td>0.2</td></tr><tr><td><strong>2</strong></td><td>4.6</td><td>3.1</td><td>1.5</td><td>0.2</td></tr><tr><td><strong>3</strong></td><td>5</td><td>3.6</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>4</strong></td><td>5.4</td><td>3.9</td><td>1.7</td><td>0.4</td></tr><tr><td><strong>5</strong></td><td>4.4</td><td>2.9</td><td>1.4</td><td>0.2</td></tr><tr><td><strong>6</strong></td><td>4.9</td><td>3.1</td><td>1.5</td><td>0.1</td></tr><tr><td><strong>7</strong></td><td>4.3</td><td>3</td><td>1.1</td><td>0.1</td></tr><tr><td><strong>8</strong></td><td>5.8</td><td>4</td><td>1.2</td><td>0.2</td></tr><tr><td><strong>9</strong></td><td>5.7</td><td>4.4</td><td>1.5</td><td>0.4</td></tr></table>"
       ],
       "text/plain": [
-       "5.1\t3.5\t1.4\t0.2\n",
+       "4.9\t3\t1.4\t0.2\n",
        "4.7\t3.2\t1.3\t0.2\n",
        "4.6\t3.1\t1.5\t0.2\n",
        "5\t3.6\t1.4\t0.2\n",
        "5.4\t3.9\t1.7\t0.4\n",
-       "4.6\t3.4\t1.4\t0.3\n",
        "4.4\t2.9\t1.4\t0.2\n",
-       "5.4\t3.7\t1.5\t0.2\n",
-       "4.8\t3.4\t1.6\t0.2\n",
-       "4.8\t3\t1.4\t0.1\n"
+       "4.9\t3.1\t1.5\t0.1\n",
+       "4.3\t3\t1.1\t0.1\n",
+       "5.8\t4\t1.2\t0.2\n",
+       "5.7\t4.4\t1.5\t0.4\n"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +330,7 @@
        "[ \u001b[33m45\u001b[39m, \u001b[33m3\u001b[39m ]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,20 +342,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Float64Array(3) [\n",
-       "  \u001b[33m0.9999999998572584\u001b[39m,\n",
-       "  \u001b[33m1.4274144924604957e-10\u001b[39m,\n",
-       "  \u001b[33m1.948289218474953e-20\u001b[39m\n",
+       "  \u001b[33m0.999999999999982\u001b[39m,\n",
+       "  \u001b[33m1.7891493919968546e-14\u001b[39m,\n",
+       "  \u001b[33m1.394247800780724e-27\u001b[39m\n",
        "]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -389,20 +397,13 @@
        "1\t0\t0\n"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "let i = 0;\n",
-    "for (const row of res.rows()) {\n",
-    "  const max = row.reduce((acc, curr, i, arr) => arr[acc] > curr ? acc : i, 0)\n",
-    "  const newR = new Array(row.length).fill(0)\n",
-    "  newR[max] = 1\n",
-    "  res.setRow(i, newR)\n",
-    "  i += 1;\n",
-    "}\n",
+    "CategoricalEncoder.fromSoftmax(res)\n",
     "res.slice(0, 10)"
    ]
   },
@@ -415,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -437,13 +438,13 @@
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
@@ -454,13 +455,13 @@
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-setosa\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-setosa\"\u001b[39m,     \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m,\n",
-       "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
+       "    \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-versicolor\"\u001b[39m, \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
        "    \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,  \u001b[32m\"Iris-virginica\"\u001b[39m,\n",
@@ -469,7 +470,7 @@
        "]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,25 +488,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th>Class</th><th>Precision</th><th>F1Score</th><th>Recall</th><th>Support</th></tr></thead><tr><td>Class Iris-setosa</td><td>1</td><td>1</td><td>1</td><td>13</td></tr><tr><td>Class Iris-versicolor</td><td>1</td><td>1</td><td>1</td><td>17</td></tr><tr><td>Class Iris-virginica</td><td>0.8823529411764706</td><td>0.9375</td><td>1</td><td>15</td></tr><tr><td>Accuracy</td><td></td><td>0.9851851851851852</td><td>45</td></tr></table>"
+       "<table><thead><tr><th>Class</th><th>Precision</th><th>F1Score</th><th>Recall</th><th>Support</th></tr></thead><tr><td>Iris-setosa</td><td>1</td><td>1</td><td>1</td><td>16</td></tr><tr><td>Iris-versicolor</td><td>1</td><td>1</td><td>1</td><td>16</td></tr><tr><td>Iris-virginica</td><td>0.7647058823529411</td><td>0.8666666666666667</td><td>1</td><td>13</td></tr><tr><td>Accuracy</td><td></td><td></td><td>0.9703703703703703</td><td>45</td></tr></table>"
       ],
       "text/plain": [
        "Classification Report\n",
        "Number of classes:\t3\n",
        "Class\tPreci\tF1\tRec\tSup\n",
-       "Iris-setosa\t1\t1\t1\t13\n",
-       "Iris-versicolor\t1\t1\t1\t17\n",
-       "Iris-virginica\t0.8823529411764706\t0.9375\t1\t15\n",
-       "Accuracy\t\t0.9851851851851852\t45"
+       "Iris-setosa\t1\t1\t1\t16\n",
+       "Iris-versicolor\t1\t1\t1\t16\n",
+       "Iris-virginica\t0.7647058823529411\t0.8666666666666667\t1\t13\n",
+       "Accuracy\t\t0.9703703703703703\t45"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we see, the classifier easily classifies different iris species. This is possible because the classes are easily separable. In a more complex database, these results may greatly vary."
+    "As we see, the classifier easily classifies different iris species. This is possible because the classes are easily separable. In a more complex dataset, these results may greatly vary."
    ]
   }
  ],
