--- a/nn/multinomial_classification.ipynb
+++ b/nn/multinomial_classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,7 @@
     "  setupBackend,\n",
     "  SoftmaxLayer,\n",
     "  tensor,\n",
+    "  tensor1D,\n",
     "  tensor2D,\n",
     "} from \"https://deno.land/x/netsaur@0.2.15/mod.ts\";\n",
     "\n",
@@ -35,7 +36,7 @@
     "  // Split the dataset\n",
     "  useSplit,\n",
     "  CategoricalEncoder,\n",
-    "} from \"https://deno.land/x/vectorizer@v0.3.4/mod.ts\";"
+    "} from \"https://deno.land/x/vectorizer@v0.3.5/mod.ts\";"
    ]
   },
   {
@@ -47,22 +48,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\n",
+       "  \u001b[32m\"sepal length\"\u001b[39m,\n",
+       "  \u001b[32m\"sepal width\"\u001b[39m,\n",
+       "  \u001b[32m\"petal length\"\u001b[39m,\n",
+       "  \u001b[32m\"petal width\"\u001b[39m,\n",
+       "  \u001b[32m\"class\"\u001b[39m\n",
+       "]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// Read the training dataset\n",
     "const _data = Deno.readTextFileSync(\"../datasets/iris.csv\");\n",
     "const data = parse(_data);\n",
+    "data.shift()\n",
     "\n",
     "// Get the predictors (x) and targets (y)\n",
     "const x = data.map((fl) => fl.slice(0, 4).map(Number));\n",
-    "const y = data.map((fl) => fl[4]);"
+    "const y = data.map((fl) => fl[4]);\n",
+    "\n",
+    "const encoder = new CategoricalEncoder()\n",
+    "const encodedY = encoder.fit(y).transform<\"f64\">(y, \"f64\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +93,23 @@
     "  { ratio: [7, 3], shuffle: true },\n",
     "  x,\n",
     "  encodedY\n",
-    ");\n"
+    ");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mDownloading\u001b[39m https://github.com/denosaurs/netsaur/releases/download/0.2.15/netsaur.dll\n",
+      "CPU Backend Initialized\n"
+     ]
+    }
+   ],
    "source": [
     "// Setup the CPU backend for Netsaur\n",
     "await setupBackend(CPU);\n",
@@ -112,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training time: 19.26720000000205ms\n"
+      "training time: 27.817799999999806ms\n"
      ]
     }
    ],
@@ -141,40 +172,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>Class</th><th>Precision</th><th>F1Score</th><th>Recall</th><th>Support</th></tr></thead><tr><td>Class setosa</td><td>1</td><td>1</td><td>1</td><td>13</td></tr><tr><td>Class versicolor</td><td>1</td><td>1</td><td>1</td><td>16</td></tr><tr><td>Class virginica</td><td>1</td><td>1</td><td>1</td><td>16</td></tr><tr><td>Accuracy</td><td></td><td>1</td><td>45</td></tr></table>"
-      ],
-      "text/plain": [
-       "Classification Report\n",
-       "Number of classes:\t3\n",
-       "Class\tPreci\tF1\tRec\tSup\n",
-       "setosa\t1\t1\t1\t13\n",
-       "versicolor\t1\t1\t1\t16\n",
-       "virginica\t1\t1\t1\t16\n",
-       "Accuracy\t\t1\t45"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "// Calculate metrics\n",
-    "const res = await Promise.all(\n",
-    "  x_test.map((input) => net.predict(tensor1D(input)))\n",
-    ");\n",
+    "const res = await Promise.all(x_test.map(d => net.predict(tensor1D(d))));\n",
+    "\n",
     "const y1 = res.map((x) => encoder.getOg(x.data.indexOf(Math.max(...x.data))));\n",
     "const y0 = encoder.untransform(y_test);\n",
-    "\n",
+    "console.log(y1, y0)\n",
     "const cReport = new ClassificationReport(y0, y1);\n",
     "cReport;\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
